# crimild-emscripten

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  crimild-emcc.js  index.html
assets/: astroboy.crimild
src/: CMakeLists.txt  Main.cpp  index.html
