CMAKE_MINIMUM_REQUIRED( VERSION 3.1.0 FATAL_ERROR )

PROJECT( crimild-emcc )

SET( CRIMILD_ENABLE_SDL ON CACHE BOOL "Enable SDL module for Crimild" )

ADD_SUBDIRECTORY( crimild )

SET ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CRIMILD_SOURCE_DIR}/CMakeTools" )

SET( CRIMILD_APP_NAME crimild-emcc )
SET( CRIMILD_APP_SOURCE_DIRECTORIES src )
SET( CRIMILD_APP_INCLUDE_DIRECTORIES src )
SET( CRIMILD_APP_ASSETS_DIRECTORY assets )
SET( CRIMILD_APP_INDEX_FILE src/index.html )

INCLUDE( ModuleBuildApp )

